🐛 FIX: grid alignment

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
+body {
 	height: 100vh;
 	width: 100vw;
 	overflow-x: hidden;
@@ -55,5 +55,12 @@ body{
 	stroke-dashoffset: -90;
 }
 
-
-
+.projects {
+	background-color: #4158d0;
+	background-image: linear-gradient(
+		43deg,
+		#4158d0 0%,
+		#c850c0 46%,
+		#ffcc70 100%
+	);
+}
